[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-pharma"
version = "0.1.2"
description = "MCP server: Russian drug reference — check ГРЛС registration status, get a drug card (forms, holder, ATC), look up ЖНВЛП inclusion and the state price cap, check Roszdravnadzor recalls, and link the official instruction. Reference data, not medical advice."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomno-mcp", email = "hello@atomno.ru" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "pharma",
  "drugs",
  "grls",
  "zhnvlp",
  "healthcare",
  "russia",
  "atomno",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Typing :: Typed",
]

dependencies = [
  "fastmcp>=2.0.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "ruff>=0.5.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-pharma"
Repository = "https://github.com/atomno-mcp/mcp-pharma"
Issues = "https://github.com/atomno-mcp/mcp-pharma/issues"
Changelog = "https://github.com/atomno-mcp/mcp-pharma/blob/main/CHANGELOG.md"
Documentation = "https://atomno-mcp.ru/mcp/pharma"

[project.scripts]
atomno-mcp-pharma = "mcp_pharma.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pharma"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "B008"]
